--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,25 @@
   font-family: "Satoshi-Variable";
   src: url(/src/fonts/Satoshi-Variable.ttf);
 }
+@font-face {
+  font-family: "Neue Montreal";
+  src: url(/src/fonts/NeueMontreal-Regular.otf);
+}
+@font-face {
+  font-family: "Mazius";
+  src: url(/src/fonts/Mazius-Extraitalic.121a71a7.otf);
+}
 
 @import "tailwindcss"; 
 
 @theme {
   --font-Satoshi: "Satoshi-Variable";
+  --font-Montreal: "Neue Montreal";
+  --font-Mazius: "Mazius";
 }
 
+body {
+  background-color: #FFFFFF;
+}
 
 
